--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
     "eslint-config-next": "^15.5.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "prettier": "^3.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.0"
   }
 }
